--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
     "@types/react-redux": "^7.1.33",
+    "axios": "^1.6.7",
     "babel-jest": "27.4.2",
     "babel-loader": "8.2.3",
     "babel-plugin-named-asset-import": "0.3.8",
