--- a/package.json
+++ b/package.json
@@ -3,70 +3,70 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.16.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
-    "@svgr/webpack": "5.5.0",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "13.0.0",
-    "@testing-library/user-event": "13.2.1",
-    "@types/jest": "27.0.1",
-    "@types/node": "16.7.13",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
+    "@babel/core": "^7.23.9",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.4.1",
+    "@testing-library/react": "^14.2.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.15",
+    "@types/react": "^18.2.50",
+    "@types/react-dom": "^18.2.18",
     "@types/react-redux": "^7.1.33",
     "axios": "^1.6.7",
-    "babel-jest": "27.4.2",
-    "babel-loader": "8.2.3",
-    "babel-plugin-named-asset-import": "0.3.8",
-    "babel-preset-react-app": "10.0.1",
-    "bfj": "7.0.2",
-    "browserslist": "4.18.1",
-    "camelcase": "6.2.1",
-    "case-sensitive-paths-webpack-plugin": "2.4.0",
-    "css-loader": "6.5.1",
-    "css-minimizer-webpack-plugin": "3.2.0",
-    "dotenv": "10.0.0",
-    "dotenv-expand": "5.1.0",
-    "eslint": "8.3.0",
-    "eslint-config-react-app": "7.0.1",
-    "eslint-webpack-plugin": "3.1.1",
-    "file-loader": "6.2.0",
-    "fs-extra": "10.0.0",
-    "html-webpack-plugin": "5.5.0",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "27.4.3",
-    "jest-resolve": "27.4.2",
-    "jest-watch-typeahead": "1.0.0",
-    "mini-css-extract-plugin": "2.4.5",
-    "postcss": "8.4.4",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "6.2.1",
-    "postcss-normalize": "10.0.1",
-    "postcss-preset-env": "7.0.1",
-    "prompts": "2.4.2",
-    "react": "18.2.0",
-    "react-app-polyfill": "3.0.0",
-    "react-dev-utils": "12.0.1",
-    "react-dom": "18.2.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
+    "bfj": "^8.0.0",
+    "browserslist": "^4.22.3",
+    "camelcase": "^8.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
+    "dotenv": "^16.4.1",
+    "dotenv-expand": "^10.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-webpack-plugin": "^4.0.1",
+    "file-loader": "^6.2.0",
+    "fs-extra": "^11.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-resolve": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "mini-css-extract-plugin": "^2.7.7",
+    "postcss": "^8.4.33",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^8.1.0",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^9.3.0",
+    "prompts": "^2.4.2",
+    "react": "^18.2.0",
+    "react-app-polyfill": "^3.0.0",
+    "react-dev-utils": "^12.0.1",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-refresh": "0.11.0",
+    "react-refresh": "^0.14.0",
     "redux": "^5.0.1",
-    "resolve": "1.20.0",
-    "resolve-url-loader": "4.0.0",
-    "sass-loader": "12.3.0",
-    "semver": "7.3.5",
-    "source-map-loader": "3.0.0",
+    "resolve": "^1.22.8",
+    "resolve-url-loader": "^5.0.0",
+    "sass-loader": "^14.1.0",
+    "semver": "^7.5.4",
+    "source-map-loader": "^5.0.0",
     "storybook": "^7.6.12",
-    "style-loader": "3.3.1",
-    "styled-components": "5.3.6",
-    "tailwindcss": "3.0.2",
-    "terser-webpack-plugin": "5.2.5",
-    "typescript": "4.4.2",
-    "web-vitals": "2.1.0",
-    "webpack": "5.64.4",
-    "webpack-dev-server": "4.6.0",
-    "webpack-manifest-plugin": "4.0.2",
-    "workbox-webpack-plugin": "6.4.1"
+    "style-loader": "^3.3.4",
+    "styled-components": "^6.1.8",
+    "tailwindcss": "^3.4.1",
+    "terser-webpack-plugin": "^5.3.10",
+    "typescript": "^5.3.3",
+    "web-vitals": "^3.5.2",
+    "webpack": "^5.90.0",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-manifest-plugin": "^5.0.0",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -98,14 +98,15 @@
     "@storybook/addon-essentials": "^7.6.12",
     "@storybook/addon-interactions": "^7.6.12",
     "@storybook/addon-links": "^7.6.12",
-    "@storybook/addon-onboarding": "1.0.11",
+    "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "^7.6.12",
     "@storybook/react": "^7.6.12",
     "@storybook/react-webpack5": "^7.6.12",
     "@storybook/test": "^7.6.12",
-    "@types/styled-components": "5.1.26",
-    "babel-plugin-styled-components": "2.0.7",
-    "eslint-plugin-storybook": "^0.6.15"
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-styled-components": "^2.1.4",
+    "eslint-plugin-storybook": "^0.6.15",
+    "yarn-upgrade-all": "^0.7.2"
   },
   "jest": {
     "roots": [
