--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.23.9",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@reduxjs/toolkit": "^2.2.1",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.2.0",
@@ -51,6 +52,7 @@
     "react-redux": "^9.1.0",
     "react-refresh": "^0.14.0",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "resolve": "^1.22.8",
     "resolve-url-loader": "^5.0.0",
     "sass-loader": "^14.1.0",
