--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.50",
     "@types/react-dom": "^18.2.18",
     "@types/react-redux": "^7.1.33",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
@@ -32,6 +33,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^4.0.1",
     "file-loader": "^6.2.0",
+    "formik": "^2.4.5",
     "fs-extra": "^11.2.0",
     "html-webpack-plugin": "^5.6.0",
     "identity-obj-proxy": "^3.0.0",
@@ -51,6 +53,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-refresh": "^0.14.0",
+    "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "resolve": "^1.22.8",
