--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint-plugin-storybook": "^0.6.15",
+    "prettier": "3.2.5",
     "yarn-upgrade-all": "^0.7.2"
   },
   "jest": {
